--- a/site2/index.html
+++ b/site2/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello coursera!</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>hello coursera! its</h1>
-               
+    <h1>coursera-test site2 </h1>
 </body>
 </html>
